updated README and also added more more form fields